packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/valid/upgrade-event-type-parents/input-001.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if upgrading of parents of an event type works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" compress="true" data-type="string:10:mc"/>
    </object-types>
    <concepts/>
    <event-types>
      <event-type name="a" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match"/>
          <property name="b" object-type="a" description="b" optional="true" multivalued="true" confidence="10"/>
        </properties>
        <relations/>
        <attachments/>
      </event-type>
      <event-type name="b" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match"/>
        </properties>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts/>
    <event-types>
      <!-- No changes, only a version increment. -->
      <event-type name="b" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="2">
        <properties>
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match"/>
        </properties>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts/>
    <event-types>
      <event-type name="b" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="3">
        <parent event-type="a" property-map="a:a" parent-description="a" siblings-description="a"/>
        <properties>
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match"/>
        </properties>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts/>
    <event-types>
      <event-type name="b" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="4">
        <!-- Changed parent description -->
        <parent event-type="a" property-map="a:a" parent-description="changed-description-parent" siblings-description="a"/>
        <properties>
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match"/>
        </properties>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
  <ontology>
    <object-types/>
    <concepts/>
    <event-types>
      <event-type name="b" description="a" display-name-singular="a" display-name-plural="a" summary="[[a]]" story="[[a]]" version="5">
        <!-- Changed siblings description -->
        <parent event-type="a" property-map="a:a" parent-description="changed-description-parent" siblings-description="changed-siblings-description"/>
        <properties>
          <property name="a" object-type="a" description="a" optional="true" multivalued="true" confidence="10" merge="match"/>
        </properties>
      </event-type>
    </event-types>
    <sources/>
  </ontology>
</edxml>
